--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -14,7 +14,7 @@
       
     
       <a href="https://libra.org" target="_blank" class="btn d-none d-lg-inline-block mb-3 mb-md-0 ml-md-3 radius-5 th-bg btn-sign-up btn-sign-in btn-sm">Libra.org</a>
-      <a href="https://developers.libra.org/" target="_blank" class="btn d-lg-inline-block mb-3 mb-md-0 ml-md-3 radius-5 th-bg btn-sign-up btn-sm">Github</a>
+      <a href="https://github.com/Aitthi/libra-wallet" target="_blank" class="btn d-lg-inline-block mb-3 mb-md-0 ml-md-3 radius-5 th-bg btn-sign-up btn-sm">Github</a>
     
     </header>
   </div>
